fix (docs): improving swagger docs in auth, categories and comments api
